# rosalind.info

./: .gitignore  README.adoc  README.md
00_intro/: intro.adoc
01-dna/: count-bases.pl  pycount.py
01_dna/: Makefile  all_test.sh  dna.py  rosalind_dna.txt  solution1.py  solution2.py  solution3.py  solution4.py  solution7.py
02-rna/: dna.txt
02_rna/: transcribe.pl  transcribe.pl6
03-revc/: revc.pl  rosalind_revc.txt
03_revc/: all_test.sh  revc.pl6  solution1.py  solution2.py  solution3.py  solution4.py  solution5.py  solution6.py  solution7.py  test.py
04-rabbits/: MemoizeFib.hi  fib.pl  mfib
04_fib/: Fib  Fib.hi  Fib.hs  all_test.sh  fib.pl6  solution1.py  solution2.py  solution3.py  test.py
05_gc/: GC.hs  Makefile  gc.cabal  gc.py  solution1.py  solution2.py  solution3.py  solution4.py  solution5.py  solution6.py  solution7.py  solution9.py  test.py
06_hamm/: hamm.py  hamming.hs  hamming.pl  hamming.pl6  hamming4.pl6  hamming5.pl6  rosalind_hamm.txt  test.py
07_iprb/: test.py
07_prot/: prot.pl6  rna.py
08_prot/: Makefile  rna.py  test.py
08_subs/: rosalind_subs.txt  subs.pl6  subs.py  test.py
09_cons/: rosalind_cons.txt  test2.fa
09_subs/: subs.py
10_cons/: cons.py  test.py
10_grph/: grph.pl6  grph.py  out  test.py
11_grph/: Makefile
11_iprb/: Makefile  iprb.py
12_fibd/: README.adoc  fibd.py  fsm.graffle  solution1.py  solution2.py  solution3.py  test.py
13_lcsm/: Binary.pm6  Makefile  lcsm.py  test.py  trend.p6
14_mprt/: .gitignore  Makefile  mprt.py  solution2.py  test.py
cons/: out  (+1 more)
dna/haskell/Dna/: Dna.cabal  LICENSE
(+77 files in other folders)
