name:                Dna
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kyclark/Dna#readme
license:             BSD3
license-file:        LICENSE
author:              Ken Youens-Clark
maintainer:          kyclark@gmail.com
copyright:           Ken Youens-Clark
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Dna
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
